# log-rider

./: .dockerignore  .env.demo.example  .env.example  .gitignore  .tpm  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  TODO.md  connect.yaml  cookies.txt  docker-compose.yml  flake.nix  init-topics.sh  init.sql  logrider-runtime-config-agent-brief.md  pi-session-2026-07-05T03-35-57-280Z_019f3058-da60-77d5-ac07-94498e78c639.html  repomix-output.md  rewrite_fields.js  shell.nix  skills-lock.json  update_readme.py
.cargo/: config.toml
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
apps/alert-worker/: index.js  package.json
apps/classifier-worker/: main.py  requirements.txt  test_model.py
apps/ingest-api/: Dockerfile  index.ts
apps/log-event-writer/: Dockerfile  package.json
apps/src/: lib.rs  main.rs
apps/telegram-bot/: go.sum  main.go
apps/web/: alerts.html  config.html  dashboard.html  index.js  metrics.html  package.json
benchmarks/: REPORT_SECTION_TEMPLATE.md  run.sh
benchmarks/k6/: api-query.js  ingest.js
benchmarks/lib/: clickhouse.sh  redis.sh  redpanda.sh  report.sh
benchmarks/scenarios/: 00-smoke.env  01-standard-500.env  05-alert-storm.env  06-classifier-throughput.env  alert-dedup.env  baseline.env  ramp.env  smoke.env  websocket.env
contracts/: env.schema
contracts/event-schemas/: log-record.schema.json
data/: k6_logs.json
example/: analytics.js  clean.sh  package-lock.json  package.json  run-alerts.sh  run-standard.sh  run.sh  setup.sh  teardown.sh
logger/axiom/: Cargo.toml
logger/axiom-derive/: Cargo.toml
logger/axiom-derive/src/: erratum.rs  lib.rs  verifiable.rs
logger/axiom/src/: aliases.rs  extensions.rs  lib.rs  macros.rs
logger/view/: Cargo.toml
logrider/: .env.demo.example  .env.example  FINALIZATION.md  README.md  TODO.md  aws.css  create_benchmarks.sh  create_benchmarks_2.js  docker-compose.yml  live_test.js  package-lock.json  scratch_ws_test.js  test-ui.js  test-ws.js  test_ch_fetch.js  test_token.txt  ws-test.js  ws_test.js  ws_test_verify.js
logrider/benchmarks/: README.md  REPORT_SECTION_TEMPLATE.md  run-all.sh  run.sh  v14-runner.mjs  v14-targets.env
logrider/contracts/: env.schema
logrider/example/: run-standard.sh  run.sh  setup.sh
logrider/persist/: docker-compose.yml  init-clickhouse.sql  init-postgres.sql
logrider/pipelines/: forwarder.yaml  persist.yaml  tags.yaml  unified.yaml
logrider/scripts/: clean.sh  cleanup.sh  create-demo-users.sh  doctor.sh  generate_k6_payloads.py  k6-load.js  k6-simple.js  setup-topics.sh  setup.sh  test.sh  (+7 more)
proto2/: .aiignore  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
proto2/src/: config.rs  correlation.rs  main.rs
proto2/src/api/v1/: logs.rs
proto2/src/parser/: dissect.rs  mod.rs  pattern.rs  ptrn.rs  vec.rs
proto2/src/utils/: log_utils.rs
proto3/: docker-compose.yml  mongod.conf  shell.nix
scripts/: doctor.sh  setup.sh
tests/: normalization_worker.rs  websocket_server.rs
(+353 files in other folders)
