[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
bon = "3.9.3"
bytes = "1.12.0"
http = "1.4.2"
jsonwebtoken = "10.4.0"
prometheus = "0.14.0"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
struson = "0.7.2"
tap = "1.0.1"
thiserror = "2.0.18"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = "0.5.3"
tracing = "0.1.44"
uuid = { version = "1.23.3", features = ["serde", "v7"] }

[dev-dependencies]
cucumber = { version = "0.21", features = ["libtest"] }
tokio = { version = "1.37.0", features = ["full", "test-util"] }

[lib]
path = "apps/src/lib.rs"

[[bin]]
name = "logger"
path = "apps/src/main.rs"

[[test]]
name = "edge_receiver"
harness = false
