[package]
name = "log-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-service = "2"
# actix-session = { version = "0.10.0", features = ["cookie-session"] }
# actix-cors = "0.7"

tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7.11"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"

sqlx = { version = "0.8.1", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "ipnetwork",
    "json",
    "chrono",
] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.0"

once_cell = "1"
dashmap = "6"
ahash = "0.8"
tokio-cron-scheduler = "0.11"
rayon = "1"
futures = "0.3"

thiserror = "1.0.63"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
priority-queue = "2"
predicates = "3.1.2"
halfbrown = "0.2"
# Note: This requires clickhouse-rs fork at ../clickhouse-rs_1
# For production, consider using: clickhouse-rs = "1.0"
clickhouse-rs = {path = "../clickhouse-rs_1"}
scru128 = "3"
xid = "1"
usearch = {version="2.17.2", features = ["simsimd", "openmp"]}
simsimd = "6.4.0"
regex = "1.11.1"
dotenv = "0.15"
