[package]
name = "axiom-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
darling = "0.23.0"
heck = "0.5.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.110"

[lib]
proc-macro = true

[lints]
workspace = true
